package com.kco.pattern.bridge.demo1;

/**
 * Created by Administrator on 2017/5/12.
 */
public class Ear2 extends Ear {

    @Override
    public String name() {
        return "猪耳";
    }
}
