package com.kco.pattern.bridge.demo1;

/**
 * Created by Administrator on 2017/5/12.
 */
public class Mouth1 extends Mouth{

    @Override
    public String name() {
        return "大嘴巴";
    }
}
