package com.kco.pattern.bridge.demo1;

/**
 * Created by Administrator on 2017/5/12.
 */
public class Nose2 extends Nose {
    @Override
    public String name() {
        return "狮鼻";
    }

}
